Removed answer expansion panel and started adding SDC examples

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
-  <!-- Import Covalent Light Theme CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <!-- Import Covalent Light Theme CSS -->
   <link href="https://cdn.jsdelivr.net/npm/@covalent/components@latest/theme/prebuilt/light-theme.css" rel="stylesheet" />
   <link rel="stylesheet" media="screen"
         href="https://clinicaltables.nlm.nih.gov/lforms-versions/34.0.0/webcomponent/styles.css">
