Removed links to NHS England services, changed to NLM

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>QuestionnaireViewer</title>
+  <title>Domain Archetype</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -17,15 +17,15 @@
     <!-- Import Covalent Light Theme CSS -->
   <link href="https://cdn.jsdelivr.net/npm/@covalent/components@latest/theme/prebuilt/light-theme.css" rel="stylesheet" />
   <link rel="stylesheet" media="screen"
-        href="https://clinicaltables.nlm.nih.gov/lforms-versions/34.0.0/webcomponent/styles.css">
+        href="https://clinicaltables.nlm.nih.gov/lforms-versions/36.8.2/webcomponent/styles.css">
 </head>
 <body>
-  <script src="https://clinicaltables.nlm.nih.gov/lforms-versions/34.0.0/webcomponent/assets/lib/zone.min.js"></script>
-  <script src="https://clinicaltables.nlm.nih.gov/lforms-versions/34.0.0/webcomponent/runtime.js"></script>
-  <script src="https://clinicaltables.nlm.nih.gov/lforms-versions/34.0.0/webcomponent/polyfills.js"></script>
-  <script src="https://clinicaltables.nlm.nih.gov/lforms-versions/34.0.0/webcomponent/scripts.js"></script>
-  <script src="https://clinicaltables.nlm.nih.gov/lforms-versions/34.0.0/webcomponent/main.js"></script>
-  <script src="https://clinicaltables.nlm.nih.gov/lforms-versions/34.0.0/fhir/lformsFHIRAll.min.js"></script>
+  <script src="https://clinicaltables.nlm.nih.gov/lforms-versions/36.8.2/webcomponent/assets/lib/zone.min.js"></script>
+  <script src="https://clinicaltables.nlm.nih.gov/lforms-versions/36.8.2/webcomponent/runtime.js"></script>
+  <script src="https://clinicaltables.nlm.nih.gov/lforms-versions/36.8.2/webcomponent/polyfills.js"></script>
+  <script src="https://clinicaltables.nlm.nih.gov/lforms-versions/36.8.2/webcomponent/scripts.js"></script>
+  <script src="https://clinicaltables.nlm.nih.gov/lforms-versions/36.8.2/webcomponent/main.js"></script>
+  <script src="https://clinicaltables.nlm.nih.gov/lforms-versions/36.8.2/fhir/lformsFHIRAll.min.js"></script>
   <app-root></app-root>
 </body>
 </html>
